--- a/OpenGl/OpenGl/OpenGl.vcxproj
+++ b/OpenGl/OpenGl/OpenGl.vcxproj
@@ -136,7 +136,16 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\glad.c" />
+    <ClCompile Include="src\helpers.cpp" />
     <ClCompile Include="src\main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\headers\Helpers.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\shaders\fragment.txt" />
+    <None Include="src\shaders\vertex.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
