--- a/OpenGl/OpenGl/OpenGl.vcxproj.filters
+++ b/OpenGl/OpenGl/OpenGl.vcxproj.filters
@@ -18,5 +18,20 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\helpers.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\headers\Helpers.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="src\shaders\vertex.txt" />
+    <None Include="src\shaders\fragment.txt" />
   </ItemGroup>
 </Project>
